[package]
name = "clickhouse-filters"
version = "0.1.0"
edition = "2021"
authors = ["Kingsley Hendrickse <kingsley.hendrickse@gmail.com>"]
description = "A simple rust helper to generate ClickHouse SQL for pagination, sorting and filtering"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/clickhouse-filters/latest/clickhouse-filters/"
readme = "README.md"
homepage = "https://github.com/kingsleyh/clickhouse-filters"
repository = "https://github.com/kingsleyh/clickhouse-filters"
keywords = ["clickhouse", "pagination", "filtering", "sorting", "sql"]
categories = ["data-structures", "web-programming"]

[lib]
name = "clickhouse_filters"
path = "src/lib/mod.rs"

[dependencies]
eyre = "0.6.12"
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
testcontainers-modules = { version = "0.11.4", features = ["clickhouse"] }
tokio = { version = "1", features = ["full"] }
clickhouse = { version = "0.13.2", features = ["uuid", "time"] }
time = "0.3.34"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }